# AM_Multilingual

./: .gitignore  README.md  README.zh.md  fix_gemini.sh  pyproject.toml
cache/: artist_cache.json  mb_cache.json
data/: artist_cache.json  mb_cache.json
scripts/: fix_gemini.sh  shortcuts_gemini.sh
src/: gemini_repair.py  get_library.py  manual_repair.py  musicbrain.py  spotify_repair.py  utils.py  write_library.py
